-Seems my style switcher has been broken in chrome for a while? Found a fix, will go fix the demo sites later.

--- a/css/switch.css
+++ b/css/switch.css
@@ -93,10 +93,10 @@
 #slideout {
   background: #666;
   position:fixed;
-  width:150px;
+  width:185px;
   height:440px;
   top:15%;
-  left: 0px;
+  left: -185px;
   z-index: 40000;
   
 }
@@ -105,7 +105,7 @@
   height:40px;
   width:40px;
   background:#000;
-  margin-left:150px;
+  margin-left:185px;
   margin-top: 20px;
   opacity: .8;
 }
@@ -143,6 +143,6 @@
 .bg-nav li, #color-nav li, #layout-nav li, #heading-bg-nav li {
   margin-top: 5px; 
   margin-bottom: 5px;
-  display: inline;
+  display: inline-block;
   margin-right: 8px;
 }
